## Purpose: The automake makefile for wxWindows (include/wx/generic subdir)
## Author:  Vadim Zeitlin
## Version: $Id$
##
## Process this file with automake to produce Makefile.in

wx_generic_includedir = ${includedir}/wx/generic
wx_generic_include_HEADERS = \
 caret.h \
 choicdgg.h \
 colrdlgg.h \
 dcpsg.h \
 dirdlgg.h \
 extdlgg.h \
 fontdlgg.h \
 gridg.h \
 helpext.h \
 helphtml.h \
 helpxlp.h \
 imaglist.h \
 laywin.h \
 listctrl.h \
 msgdlgg.h \
 notebook.h \
 panelg.h \
 printps.h \
 prntdlgg.h \
 progdlgg.h \
 sashwin.h \
 scrolwin.h \
 splitter.h \
 statusbr.h \
 tabg.h \
 textdlgg.h \
 treectrl.h
 
# why do these get installed ? 
# info.xpm \
# question.xpm \
# error.xpm \
# warning.xpm
