## Purpose: The automake makefile for wxWindows (include/wx/gtk subdir)
## Author:  Vadim Zeitlin
## Version: $Id$
##
## Process this file with automake to produce Makefile.in

wx_gtk_includedir = ${includedir}/wx/gtk
wx_gtk_include_HEADERS = \
 accel.h \
 app.h \
 bitmap.h \
 bmpbuttn.h \
 brush.h \
 button.h \
 checkbox.h \
 checklst.h \
 choice.h \
 choicdlg.h \
 clipbrd.h \
 colour.h \
 combobox.h \
 control.h \
 cursor.h \
 dataobj.h \
 dc.h \
 dcclient.h \
 dcmemory.h \
 dcps.h \
 dcscreen.h \
 dialog.h \
 dnd.h \
 filedlg.h \
 font.h \
 frame.h \
 gauge.h \
 gdiobj.h \
 icon.h \
 joystick.h \
 listbox.h \
 mdi.h \
 menu.h \
 menuitem.h \
 mesdlg.h \
 minifram.h \
 notebook.h \
 palette.h \
 pen.h \
 radiobox.h \
 radiobut.h \
 region.h \
 scrolbar.h \
 settings.h \
 slider.h \
 spinbutt.h \
 statbmp.h \
 statbox.h \
 statline.h \
 stattext.h \
 tbargtk.h \
 textctrl.h \
 textdlg.h \
 timer.h \
 tooltip.h \
 treectrl.h \
 wave.h \
 win_gtk.h \
 window.h

# why do these get installed ? 
# info.xpm \
# question.xpm \
# error.xpm \
# warning.xpm
