## Purpose: The automake makefile for wxWindows (include/wx/html subdir)
## Author:  Harm van der Heijden
##
## Process this file with automake to produce Makefile.in

wx_html_includedir = ${includedir}/wx/html
wx_html_include_HEADERS = \
forcelink.h \
htmlcell.h \
htmldefs.h \
htmlfilter.h \
htmlhelp.h \
htmlparser.h \
htmltag.h \
htmlwin.h \
htmlwinparser.h \
mod_templ.h \
version.h
