## Purpose: The automake makefile for wxWindows (include/wx/motif subdir)
## Author:  Vadim Zeitlin
## Version: $Id$
##
## Process this file with automake to produce Makefile.in

wx_motif_includedir = ${includedir}/wx/motif
wx_motif_include_HEADERS = \
 accel.h \
 app.h \
 bitmap.h \
 bmpbuttn.h \
 brush.h \
 button.h \
 checkbox.h \
 checklst.h \
 choice.h \
 clipbrd.h \
 colordlg.h \
 colour.h \
 combobox.h \
 control.h \
 cursor.h \
 dataobj.h \
 dc.h \
 dcclient.h \
 dcmemory.h \
 dcprint.h \
 dcscreen.h \
 dialog.h \
 dirdlg.h \
 dnd.h \
 filedlg.h \
 font.h \
 fontdlg.h \
 frame.h \
 gauge.h \
 gdiobj.h \
 helpxxxx.h \
 icon.h \
 joystick.h \
 listbox.h \
 mdi.h \
 menu.h \
 menuitem.h \
 metafile.h \
 minifram.h \
 msgdlg.h \
 palette.h \
 pen.h \
 print.h \
 printdlg.h \
 private.h \
 radiobox.h \
 radiobut.h \
 region.h \
 scrolbar.h \
 settings.h \
 slider.h \
 spinbutt.h \
 statbmp.h \
 statbox.h \
 stattext.h \
 tabctrl.h \
 taskbar.h \
 textctrl.h \
 timer.h \
 toolbar.h \
 wave.h \
 window.h

# setup.h is installed in another directory because several versions of wxwin
# should be able to coexist on the same machine
portheadersdir = ${datadir}/@PACKAGE@/include/wx
portheaders_HEADERS = setup.h

