## Purpose: The automake makefile for wxWindows (include/wx/msw subdir)
## Author:  Vadim Zeitlin
## Version: $Id$
##
## Process this file with automake to produce Makefile.in

# HH: We only go into gnuwin32 and ctl3d now, since ole doesn't work anyway.
SUBDIRS = gnuwin32 ctl3d

wx_msw_includedir = ${includedir}/wx/msw

wx_msw_include_HEADERS = \
accel.h \
app.h \
bitmap.h \
bmpbuttn.h \
brush.h \
button.h \
caret.h \
checkbox.h \
checklst.h \
choice.h \
clipbrd.h \
colordlg.h \
colour.h \
combobox.h \
control.h \
curico.h \
curicop.h \
cursor.h \
dc.h \
dcclient.h \
dcmemory.h \
dcprint.h \
dcscreen.h \
dde.h \
dialog.h \
dib.h \
dibutils.h \
dirdlg.h \
dragimag.h \
filedlg.h \
font.h \
fontdlg.h \
frame.h \
gauge.h \
gauge95.h \
gaugemsw.h \
gdiobj.h \
helpwin.h \
icon.h \
imaglist.h \
iniconf.h \
joystick.h \
listbox.h \
listctrl.h \
mdi.h \
menu.h \
menuitem.h \
metafile.h \
minifram.h \
msgdlg.h \
msvcrt.h \
notebook.h \
palette.h \
pen.h \
pnghand.h \
pngread.h \
printdlg.h \
printwin.h \
private.h \
radiobox.h \
radiobut.h \
regconf.h \
region.h \
registry.h \
scrolbar.h \
settings.h \
setup0.h \
slider.h \
slider95.h \
slidrmsw.h \
spinbutt.h \
statbmp.h \
statbox.h \
statbr95.h \
statline.h \
stattext.h \
tabctrl.h \
taskbar.h \
tbar95.h \
tbarmsw.h \
textctrl.h \
timer.h \
tooltip.h \
treectrl.h \
wave.h \
window.h \
winundef.h \
xpmhand.h \
blank.cur \
bullseye.cur \
child.ico \
clock.cur \
error.ico \
hand.cur \
heart.cur \
info.ico \
magnif1.cur \
mdi.ico \
noentry.cur \
pbrush.cur \
pencil.cur \
pntleft.cur \
pntright.cur \
query.cur \
question.ico \
roller.cur \
size.cur \
std.ico \
tip.ico \
warning.ico \
watch1.cur \
disable.bmp \
wx.rc

